mock_object/tests/cases/failure/invalid_syntax_arg/invalid_syntax_arg.stderr
error: custom attribute panicked
 --> tests/cases/failure/invalid_syntax_arg/invalid_syntax_arg.rs:3:1
  |
3 | / #[mock_object(
4 | |     mock_one: ["Test value for mock one.", 89],
5 | | )]
  | |__^
  |
  = help: message: Problem with parsing equals sign: Error("expected `=`")

error[E0425]: cannot find type `TestObj` in this scope
  --> tests/cases/failure/invalid_syntax_arg/invalid_syntax_arg.rs:11:6
   |
11 | impl TestObj {
   |      ^^^^^^^ not found in this scope

error[E0433]: cannot find type `TestObj` in this scope
  --> tests/cases/failure/invalid_syntax_arg/invalid_syntax_arg.rs:21:29
   |
21 |     let test_obj_mock_one = TestObj::mock_one();
   |                             ^^^^^^^ use of undeclared type `TestObj`
